--- a/style.css
+++ b/style.css
@@ -251,13 +251,16 @@ body{
   margin: 0px 20px;
   width: 50px;
 }
+.icons{
+  margin-top: 30px
+}
 .icon{
-  font-size: 20px;
+  font-size: 24px;
   margin-left: 10px;
-  padding: 10px;
-  border: 2px solid #ededed;
-  border-radius: 50%;
-  color: #f0e4e4;
+  color: #8abcdf;
+}
+.icon:hover{
+  color: #b1f1f1;
 }
 .experiences{
   margin:20px;
